[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/journal/Journal Menu Overlay- Blank.png" type="Texture" id=1]
[ext_resource path="res://src/ExitJournal.gd" type="Script" id=2]
[ext_resource path="res://src/NextJournal.gd" type="Script" id=3]
[ext_resource path="res://src/PrevJournal.gd" type="Script" id=4]
[ext_resource path="res://assets/journal/Journal Menu Overlay- Lich Leopard.png" type="Texture" id=5]
[ext_resource path="res://assets/journal/Journal Menu Overlay- Ghost Cat.png" type="Texture" id=6]
[ext_resource path="res://assets/journal/Journal Menu Overlay- Zombie Tiger.png" type="Texture" id=7]
[ext_resource path="res://assets/journal/Journal Menu Overlay- Witch Cat.png" type="Texture" id=8]
[ext_resource path="res://assets/journal/Polaroids-Ghost Cat.png" type="Texture" id=9]
[ext_resource path="res://assets/journal/Polaroids-Witch Cat.png" type="Texture" id=10]
[ext_resource path="res://assets/journal/Polaroids-Lich Leopard.png" type="Texture" id=11]
[ext_resource path="res://assets/journal/Polaroids-Zombie Tiger.png" type="Texture" id=12]
[ext_resource path="res://assets/journal/Journal Menu Overlay- Words.png" type="Texture" id=13]
[ext_resource path="res://src/EvidenceSelector.gd" type="Script" id=14]
[ext_resource path="res://src/EvidenceSelectorButton.gd" type="Script" id=15]
[ext_resource path="res://src/Journal.gd" type="Script" id=16]
[ext_resource path="res://assets/sound/sfx/pageflip.tres" type="AudioStream" id=17]
[ext_resource path="res://assets/sprites/Cat Socks.png" type="Texture" id=18]
[ext_resource path="res://assets/carpets/Carpet3.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/Yarn.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/Brush.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/Catbed.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/Cat collar.png" type="Texture" id=23]

[node name="Journal" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 16 )

[node name="EvidenceSelector" type="Sprite" parent="."]
position = Vector2( 514, 301.5 )
scale = Vector2( 3.75, 2.87981 )
texture = ExtResource( 13 )
script = ExtResource( 14 )

[node name="CatType" type="Label" parent="EvidenceSelector"]
margin_left = -120.0
margin_top = -43.0
margin_right = 100.0
margin_bottom = -27.0
rect_scale = Vector2( 0.3, 0.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cat Type"
align = 1
autowrap = true

[node name="TypeSelector" type="Label" parent="EvidenceSelector"]
margin_left = -120.0
margin_top = -32.2638
margin_right = 96.0
margin_bottom = -16.2638
rect_scale = Vector2( 0.3, 0.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cat Type"
align = 1
autowrap = true

[node name="EvidenceFound" type="Label" parent="EvidenceSelector"]
margin_left = -118.0
margin_top = -11.0
margin_right = 88.0
margin_bottom = 5.0
rect_scale = Vector2( 0.3, 0.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Evidence Found"
align = 1
autowrap = true

[node name="Evidence1" type="Label" parent="EvidenceSelector"]
margin_left = -121.467
margin_top = 1.0
margin_right = 106.533
margin_bottom = 17.0
rect_scale = Vector2( 0.3, 0.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Unknown"
align = 1
autowrap = true

[node name="Evidence2" type="Label" parent="EvidenceSelector"]
margin_left = -121.0
margin_top = 12.0
margin_right = 105.0
margin_bottom = 28.0
rect_scale = Vector2( 0.3, 0.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Unknown"
align = 1
autowrap = true

[node name="ItemList" type="Label" parent="EvidenceSelector"]
margin_left = 56.0
margin_top = -20.2638
margin_right = 268.0
margin_bottom = -4.26378
rect_scale = Vector2( 0.3, 0.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cat Type"
align = 1
autowrap = true

[node name="ItemsNeeded" type="Label" parent="EvidenceSelector"]
margin_left = 55.0
margin_top = -42.0
margin_right = 273.0
margin_bottom = -26.0
rect_scale = Vector2( 0.3, 0.6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Items Needed"
align = 1
autowrap = true

[node name="TLButton" type="Button" parent="EvidenceSelector"]
margin_left = -132.267
margin_top = -35.5926
margin_right = -120.267
margin_bottom = -13.5926
rect_scale = Vector2( 0.762928, 0.594023 )
script = ExtResource( 15 )

[node name="TRButton" type="Button" parent="EvidenceSelector"]
margin_left = -51.4667
margin_top = -34.8981
margin_right = -39.4667
margin_bottom = -12.8981
rect_scale = Vector2( 0.762928, 0.594023 )
script = ExtResource( 15 )
side = 1

[node name="E1LButton" type="Button" parent="EvidenceSelector"]
margin_left = -132.267
margin_top = -3.29882
margin_right = -120.267
margin_bottom = 18.7012
rect_scale = Vector2( 0.762928, 0.594023 )
script = ExtResource( 15 )
number = 1

[node name="E1RButton" type="Button" parent="EvidenceSelector"]
margin_left = -51.4667
margin_top = -2.60432
margin_right = -39.4667
margin_bottom = 19.3957
rect_scale = Vector2( 0.762928, 0.594023 )
script = ExtResource( 15 )
number = 1
side = 1

[node name="E2LButton" type="Button" parent="EvidenceSelector"]
margin_left = -132.0
margin_top = 10.591
margin_right = -120.0
margin_bottom = 32.591
rect_scale = Vector2( 0.762928, 0.594023 )
script = ExtResource( 15 )
number = 2

[node name="E2RButton" type="Button" parent="EvidenceSelector"]
margin_left = -51.4666
margin_top = 11.2855
margin_right = -39.4666
margin_bottom = 33.2855
rect_scale = Vector2( 0.762928, 0.594023 )
script = ExtResource( 15 )
number = 2
side = 1

[node name="Evidence" type="Sprite" parent="."]
visible = false
position = Vector2( 514, 301.5 )
scale = Vector2( 3.75, 2.87981 )
texture = ExtResource( 13 )

[node name="name" type="Label" parent="Evidence"]
margin_left = 77.3333
margin_top = -99.1385
margin_right = 196.333
margin_bottom = -83.1385
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Brush"
autowrap = true

[node name="likes" type="Label" parent="Evidence"]
margin_left = -120.0
margin_top = -43.0
margin_right = 118.0
margin_bottom = 100.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Different ghost cats leave different types of evidence, which require a specific cure."
autowrap = true

[node name="likes2" type="Label" parent="Evidence"]
margin_left = 55.0
margin_top = -42.0
margin_right = 310.0
margin_bottom = 101.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A ghostly hairball means the cat needs a brush."
autowrap = true

[node name="Sprite" type="Sprite" parent="Evidence"]
position = Vector2( 91.2, -66.4974 )
texture = ExtResource( 21 )

[node name="Evidence2" type="Sprite" parent="."]
visible = false
position = Vector2( 514, 301.5 )
scale = Vector2( 3.75, 2.87981 )
texture = ExtResource( 13 )

[node name="likes" type="Label" parent="Evidence2"]
margin_left = -120.0
margin_top = -43.0
margin_right = 137.0
margin_bottom = 49.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Freezing temps, as shown by cold breath, means the cat wants its bed.
"
autowrap = true

[node name="likes3" type="Label" parent="Evidence2"]
margin_left = -119.0
margin_top = 2.0
margin_right = 130.0
margin_bottom = 145.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ecto-pawprints means the cat needs some socks."
autowrap = true

[node name="likes4" type="Label" parent="Evidence2"]
margin_left = 56.0
margin_top = 0.868103
margin_right = 274.0
margin_bottom = 143.868
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A scratching cat needs yarn to play with."
autowrap = true

[node name="likes2" type="Label" parent="Evidence2"]
margin_left = 55.0
margin_top = -42.0
margin_right = 296.0
margin_bottom = 31.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Spectral meowing means the cat wants its collar."
autowrap = true

[node name="Sprite3" type="Sprite" parent="Evidence2"]
modulate = Color( 1, 0.411765, 0.411765, 1 )
position = Vector2( -73.3333, -63.3722 )
scale = Vector2( 0.642942, 0.658325 )
texture = ExtResource( 19 )

[node name="Sprite2" type="Sprite" parent="Evidence2"]
position = Vector2( -68.8, -63.7195 )
texture = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Evidence2"]
position = Vector2( -100.8, -69.9699 )
texture = ExtResource( 22 )

[node name="Sprite4" type="Sprite" parent="Evidence2"]
position = Vector2( 74.1333, -68.2337 )
texture = ExtResource( 23 )

[node name="Sprite5" type="Sprite" parent="Evidence2"]
position = Vector2( 105.067, -60.247 )
texture = ExtResource( 20 )

[node name="name" type="Label" parent="Evidence2"]
margin_left = 60.8
margin_top = -98.444
margin_right = 179.8
margin_bottom = -82.444
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Collar"
autowrap = true

[node name="name4" type="Label" parent="Evidence2"]
margin_left = 98.4
margin_top = -98.444
margin_right = 217.4
margin_bottom = -82.444
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Yarn"
autowrap = true

[node name="name2" type="Label" parent="Evidence2"]
margin_left = -117.333
margin_top = -97.7495
margin_right = 1.66667
margin_bottom = -81.7495
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Catbed"
autowrap = true

[node name="name3" type="Label" parent="Evidence2"]
margin_left = -81.8667
margin_top = -97.7495
margin_right = 37.1333
margin_bottom = -81.7495
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Socks"
autowrap = true

[node name="Intro" type="Sprite" parent="."]
visible = false
position = Vector2( 514, 301.5 )
scale = Vector2( 3.75, 2.87981 )
texture = ExtResource( 1 )

[node name="pic" type="Label" parent="Intro"]
margin_left = -119.0
margin_top = -89.0
margin_right = 92.0
margin_bottom = -15.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cat picture here"
align = 1
valign = 1
autowrap = true

[node name="likes" type="Label" parent="Intro"]
margin_left = -120.0
margin_top = -43.0
margin_right = 136.0
margin_bottom = 100.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Likes and dislikes listed here"
autowrap = true

[node name="spite" type="Label" parent="Intro"]
margin_left = 70.9333
margin_top = -95.3188
margin_right = 140.933
margin_bottom = -79.3188
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Spite"

[node name="strength" type="Label" parent="Intro"]
margin_left = 98.6667
margin_top = -74.8313
margin_right = 210.667
margin_bottom = -58.8313
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strength"

[node name="interactive" type="Label" parent="Intro"]
margin_left = 54.4
margin_top = -52.6076
margin_right = 236.4
margin_bottom = -36.6076
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interactivity"

[node name="run" type="Label" parent="Intro"]
margin_left = 24.8
margin_top = -73.7896
margin_right = 150.8
margin_bottom = -57.7896
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Flee Rate"

[node name="photo" type="Label" parent="Intro"]
margin_left = 45.0
margin_top = -34.0
margin_right = 279.0
margin_bottom = 78.0
rect_scale = Vector2( 0.3, 0.575 )
text = "Completed Photo"
align = 1
valign = 1
autowrap = true

[node name="GhostCat" type="Sprite" parent="."]
visible = false
position = Vector2( 514, 301.5 )
scale = Vector2( 3.75, 2.88 )
texture = ExtResource( 6 )

[node name="name" type="Label" parent="GhostCat"]
margin_left = -110.133
margin_top = -98.0903
margin_right = 67.8667
margin_bottom = -82.0903
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ghost Cat"

[node name="catlikes" type="Label" parent="GhostCat"]
margin_left = -122.0
margin_top = -42.0
margin_right = 203.0
margin_bottom = 99.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Likes: Throwing pool balls and kitchenware, Shaking scratch posts
Dislikes: Phone ringing, Doorbell ringing, Sink running
Cure: Catch a mouse"
autowrap = true

[node name="Polaroids-GhostCat" type="Sprite" parent="GhostCat"]
position = Vector2( 79.8667, -1.56538 )
texture = ExtResource( 9 )

[node name="spite" type="Label" parent="GhostCat"]
margin_left = 70.9333
margin_top = -95.3188
margin_right = 140.933
margin_bottom = -79.3188
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Spite"

[node name="strength" type="Label" parent="GhostCat"]
margin_left = 98.6667
margin_top = -74.8313
margin_right = 210.667
margin_bottom = -58.8313
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strength"

[node name="interactive" type="Label" parent="GhostCat"]
margin_left = 54.4
margin_top = -52.6076
margin_right = 236.4
margin_bottom = -36.6076
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interactivity"

[node name="run" type="Label" parent="GhostCat"]
margin_left = 24.8
margin_top = -73.7896
margin_right = 150.8
margin_bottom = -57.7896
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Flee Rate"

[node name="LichLeopard" type="Sprite" parent="."]
visible = false
position = Vector2( 514, 301.5 )
scale = Vector2( 3.75, 2.88 )
texture = ExtResource( 5 )

[node name="name" type="Label" parent="LichLeopard"]
margin_left = -110.133
margin_top = -98.0903
margin_right = 67.8667
margin_bottom = -82.0903
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lich Leopard"

[node name="leopardlikes" type="Label" parent="LichLeopard"]
margin_left = -121.0
margin_top = -43.0
margin_right = 236.0
margin_bottom = 182.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Likes: Shaking curtains, Activating toasters, Shaking scratch posts
Dislikes: Sink running, Fridge opening, Being in the bedroom
Cure: Give it fish"
autowrap = true

[node name="Polaroids-LichLeopard" type="Sprite" parent="LichLeopard"]
position = Vector2( 79.867, -1.565 )
texture = ExtResource( 11 )

[node name="spite" type="Label" parent="LichLeopard"]
margin_left = 70.9333
margin_top = -95.3188
margin_right = 140.933
margin_bottom = -79.3188
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Spite"

[node name="strength" type="Label" parent="LichLeopard"]
margin_left = 98.6667
margin_top = -74.8313
margin_right = 210.667
margin_bottom = -58.8313
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strength"

[node name="interactive" type="Label" parent="LichLeopard"]
margin_left = 54.4
margin_top = -52.6076
margin_right = 236.4
margin_bottom = -36.6076
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interactivity"

[node name="run" type="Label" parent="LichLeopard"]
margin_left = 24.8
margin_top = -73.7896
margin_right = 150.8
margin_bottom = -57.7896
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Flee Rate"

[node name="WitchCat" type="Sprite" parent="."]
visible = false
position = Vector2( 514, 301.5 )
scale = Vector2( 3.75, 2.88 )
texture = ExtResource( 8 )

[node name="name" type="Label" parent="WitchCat"]
margin_left = -110.133
margin_top = -98.0903
margin_right = 67.8667
margin_bottom = -82.0903
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Witch Cat"

[node name="witchlikes" type="Label" parent="WitchCat"]
margin_left = -121.0
margin_top = -43.0
margin_right = 219.0
margin_bottom = 100.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Likes: Throwing things, Activating toaster, Shaking game cabinet
Dislikes: Sink turning on, Scratch post interactions, Cabinets
Cure: Find a broom"
autowrap = true

[node name="Polaroids-WitchCat" type="Sprite" parent="WitchCat"]
position = Vector2( 79.865, -1.565 )
texture = ExtResource( 10 )

[node name="spite" type="Label" parent="WitchCat"]
margin_left = 70.9333
margin_top = -95.3188
margin_right = 140.933
margin_bottom = -79.3188
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Spite"

[node name="strength" type="Label" parent="WitchCat"]
margin_left = 98.6667
margin_top = -74.8313
margin_right = 210.667
margin_bottom = -58.8313
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strength"

[node name="interactive" type="Label" parent="WitchCat"]
margin_left = 54.4
margin_top = -52.6076
margin_right = 236.4
margin_bottom = -36.6076
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interactivity"

[node name="run" type="Label" parent="WitchCat"]
margin_left = 24.8
margin_top = -73.7896
margin_right = 150.8
margin_bottom = -57.7896
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Flee Rate"

[node name="ZombieTiger" type="Sprite" parent="."]
visible = false
position = Vector2( 514, 301.5 )
scale = Vector2( 3.75, 2.88 )
texture = ExtResource( 7 )

[node name="name" type="Label" parent="ZombieTiger"]
margin_left = -110.133
margin_top = -98.0903
margin_right = 67.8667
margin_bottom = -82.0903
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Zombie Tiger"

[node name="tigerlikes" type="Label" parent="ZombieTiger"]
margin_left = -121.0
margin_top = -43.0
margin_right = 178.0
margin_bottom = 100.0
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Likes: Sink running, TV on, Shaking large furniture
Dislikes: Fridge opening, TV off, Phone ringing
Cure: Give it steak"
autowrap = true

[node name="Polaroids-ZombieTiger" type="Sprite" parent="ZombieTiger"]
position = Vector2( 79.865, -1.565 )
texture = ExtResource( 12 )

[node name="spite" type="Label" parent="ZombieTiger"]
margin_left = 70.9333
margin_top = -95.3188
margin_right = 140.933
margin_bottom = -79.3188
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Spite"

[node name="strength" type="Label" parent="ZombieTiger"]
margin_left = 98.6667
margin_top = -74.8313
margin_right = 210.667
margin_bottom = -58.8313
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Strength"

[node name="interactive" type="Label" parent="ZombieTiger"]
margin_left = 54.4
margin_top = -52.6076
margin_right = 236.4
margin_bottom = -36.6076
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Interactivity"

[node name="run" type="Label" parent="ZombieTiger"]
margin_left = 24.8
margin_top = -73.7896
margin_right = 150.8
margin_bottom = -57.7896
rect_scale = Vector2( 0.3, 0.575 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Flee Rate"

[node name="ExitJournal" type="Button" parent="."]
margin_left = 946.0
margin_top = 406.0
margin_right = 1014.0
margin_bottom = 435.0
text = "Exit"
script = ExtResource( 2 )

[node name="NextJournal" type="Button" parent="."]
margin_left = 873.0
margin_top = 406.0
margin_right = 941.0
margin_bottom = 435.0
text = "Next"
script = ExtResource( 3 )

[node name="PrevJournal" type="Button" parent="."]
visible = false
margin_left = 13.0
margin_top = 402.0
margin_right = 57.0
margin_bottom = 431.0
text = "Prev"
script = ExtResource( 4 )

[node name="PageFlip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
